CB-12: scribe generate
