# routes/api.php
@@ -16,10 +16,6 @@ use App\Http\Controllers\ForgotPasswordController;
 |
 */
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
-});
-
 Route::post('signup', [AuthController::class, 'signup'])->name('page.signup');
 Route::post('login', [ AuthController::class, 'login'])->name('login');
 Route::post('reset-password-link', [ForgotPasswordController::class, 'sendResetLinkEmail']);
